REV-17934 fix spacing between title, tertiary nav and filter bar

--- a/_scss/components-alt/filters.scss
+++ b/_scss/components-alt/filters.scss
@@ -3,7 +3,6 @@
   //border-top: 1px solid $table-border-color;
   //border-bottom: 1px solid $table-border-color;
   padding: 10px 0;
-  margin-top: 10px;
   margin-bottom: 0;
   .form-group {
     display: inline-block;
