--- a/_scss/components-alt/headers.scss
+++ b/_scss/components-alt/headers.scss
@@ -20,6 +20,7 @@ h1 {
     font-weight: 300;
     line-height: 1;
     padding: 10px 0;
+    min-height: 65px;
     margin: 0;
   }
   .btn,
